--- a/styles.css
+++ b/styles.css
@@ -277,3 +277,84 @@ nav a:hover {
     0% {opacity:0;}
     100% {opacity:1;}
 }
+
+.col {
+    flex: 1;
+    animation: colfadeIn ease-in-out 2s;
+    -webkit-animation: colfadeIn ease-in-out 2s;
+    -moz-animation: colfadeIn ease-in-out 2s;
+    -o-animation: colfadeIn ease-in-out 2s;
+    -ms-animation: colfadeIn ease-in-out 2s;
+}
+
+@keyframes colfadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+}
+  
+@-moz-keyframes colfadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+}
+  
+@-webkit-keyframes colfadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+}
+  
+@-o-keyframes colfadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+}
+  
+@-ms-keyframes colfadeIn {
+    0% {opacity:0;}
+    100% {opacity:1;}
+}
+
+.row {
+    display: flex;
+}
+
+.project-image {
+    width: 50%;
+}
+
+@media only screen and (max-width: 765px) { 
+    ul.icons {
+        display: flex;
+        justify-content: end;
+        padding-left: 10px;
+    }
+
+    .inner-content p {
+        font-size: 1.25rem;
+    }
+
+    .aboutHeader {
+        padding-right: 0px;
+        padding-left: 0px;
+        padding-top: 25px;;
+        margin: 25px;
+    }
+    
+    p {
+        font-size: 15px;
+    }
+
+    .row {
+        display: block;
+    }
+
+    body {
+        width: auto;
+    }
+
+    .page-content {
+        margin-top: 10px;
+    }
+
+    .project-image {
+        width: 100%;
+    }
+}
