--- a/styles.css
+++ b/styles.css
@@ -205,9 +205,11 @@ nav a:hover {
 
 .nav {
     display: flex;
-    justify-content: space-evenly;
-    max-width: 600px;
-    padding-top: 20px;
+    justify-content: space-between;
+    width: 100%;
+    text-align: center;
+    align-items: center;
+    padding: 15px 2% 0px 2%;
     animation: navfadeIn ease-in-out 0.5s;
     -webkit-animation: navfadeIn ease-in-out 0.5s;
     -moz-animation: navfadeIn ease-in-out 0.5s;
@@ -243,7 +245,6 @@ nav a:hover {
 .aboutHeader {
     margin: 0 auto;
     padding-top: 70px; 
-    padding-right: 40px;
     text-align: center;
     max-width: 700px;
     animation: contentfadeIn ease-in-out 2s;
