--- a/styles.css
+++ b/styles.css
@@ -377,3 +377,58 @@ nav a:hover {
         width: 100%;
     }
 }
+
+.video-button {
+    font-family: "Poppins", sans-serif;
+    color: #FFFFFF;
+    padding: 7px 20px 7px 20px;
+    letter-spacing: 0.2rem;
+    font-size: 1rem;
+    font-weight: 300;
+}
+
+.video-button:hover {
+    transform:scale(1.05);
+    cursor:pointer;
+}
+
+.video-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 99999;
+    background-color: rgba(255, 122, 0, 0.1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s;
+}
+
+.video-container.close {
+    position: absolute;
+    top: 10%;
+    right: 25px;
+    cursor: pointer;
+}
+
+.video-container video {
+    width: 90%;
+    max-width: 800px;
+    transform: scale(0);
+    box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2);
+    outline: none;
+    transition: all 0.3s;
+}
+
+.video-container.show {
+    pointer-events: all;
+    opacity: 1;
+}
+
+.video-container.show video {
+    transform: scale(1);
+}
