--- a/styles.css
+++ b/styles.css
@@ -399,7 +399,7 @@ nav a:hover {
     width: 100%;
     height: 100%;
     z-index: 99999;
-    background-color: rgba(255, 122, 0, 0.1);
+    background-color: rgba(255, 255, 255, 0.2);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -408,11 +408,12 @@ nav a:hover {
     transition: all 0.3s;
 }
 
-.video-container.close {
+.video-container .close {
     position: absolute;
     top: 10%;
     right: 25px;
     cursor: pointer;
+    color: white;
 }
 
 .video-container video {
@@ -427,6 +428,7 @@ nav a:hover {
 .video-container.show {
     pointer-events: all;
     opacity: 1;
+    backdrop-filter: 2px;
 }
 
 .video-container.show video {
