--- a/styles.css
+++ b/styles.css
@@ -428,7 +428,7 @@ nav a:hover {
 .video-container.show {
     pointer-events: all;
     opacity: 1;
-    backdrop-filter: 2px;
+    -webkit-backdrop-filter: blur(2px);
 }
 
 .video-container.show video {
