--- a/styles.css
+++ b/styles.css
@@ -423,6 +423,7 @@ nav a:hover {
     box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2);
     outline: none;
     transition: all 0.3s;
+    border-radius: 6px;
 }
 
 .video-container.show {
