--- a/styles.css
+++ b/styles.css
@@ -414,7 +414,7 @@ nav a:hover {
     right: 5%;
     font-size: 25px;
     cursor: pointer;
-    color: white;
+    color: rgb(255, 255, 255);
     border-block-end: 3px solid black;
 
 }
